# mc-shell

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  build.sh  install.sh  main.cpp  main.hpp  package.sh  terminal-settings.cpp
.devcontainer/: devcontainer.json
install/: mc-shell.desktop.in
src/: application.cpp  application.hpp  configuration.cpp  configuration.hpp  constants-impl.hpp.in  constants.h  constants.hpp  main.cpp  terminal-settings.cpp  terminal-settings.hpp  terminal-widget.cpp  terminal-widget.hpp
